@@ -280,6 +280,14 @@
 # unset, or set to 0, then the default of 1024 bytes will be used.
 #websockets_headers_size
 
+# Enforce origin checking for websockets connections. This should be set to the
+# string of the host that you wish to allow connections from, as set as the
+# Origin header in the http request.
+# For example: https://example.com:8080
+# If left unset will allow connections from any origin.
+# May be set multiple times.
+#websockets_origin
+
 # -----------------------------------------------------------------
 # Certificate based SSL/TLS support
 # -----------------------------------------------------------------
